scalatest/finders: .newInstance() -> .getDeclaredConstructor().newInstance()